[package]
name = "minifb-frontend"
version = "0.1.0"
authors = ["Eric Nowac <nowace@msoe.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gba-emulator = {path = "../gba-emu"}
minifb = "0.15.3"
log = "0.4.8"
env_logger = "0.9.0"
average="0.10.4"
clap = "3.0.0-beta.4"
gilrs = "0.8.1"

[profile.release]
debug = true