[package]
name = "minifb-frontend"
version = "0.1.0"
authors = ["Eric Nowac <nowace@msoe.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gba-emulator = {path = "../gba-emu"}
minifb = "0.28.0"
log = "0.4.27"
env_logger = "0.11.7"
average="0.16.0"
clap = { version = "4.5.34", features = ["derive"] }
gilrs = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

[profile.release]
debug = true
